# terminal-hero

./: LICENSE  README.md  terminal-hero.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
minhas/: concate.pl  consolida.pl  converte.pl  distintos.pl  distintos2.pl  divide.pl  divide_ocorrencias.pl  dobro.pl  elementos_unicos.pl  iesimo.pl  insere_ordenado.pl  intervalo.pl  maior.pl  menores.pl  perfeito.pl  pertence.pl  primo.pl  remove.pl  removerepadj.pl  repetidos.pl  separa.pl  situacao_aluno.pl  soma.pl  sublist.pl  substitui.pl  tam.pl  ultimo.pl
prolog/: README.md  a251primo.pl  a251print.pl  a251situacao.pl  a251soma.pl  abs.pl  binario.pl  concat.pl  familia.pl  mapa.pl  perfeito.pl  pertence.pl  q1.pl  remove.pl  reverte.pl  soma.pl  sublista.pl  tamanho.pl  tbinario.pl  tdividelista.pl  teste.pl  tperfeito.pl  tpertence.pl  tremoveall.pl  treverse.pl  tsoma.pl  ultimo.pl
src/: TerminalHero.hs
src/Assets/: Title.hi  Title.hs
tests/: Tests.hs
