cabal-version:      2.2

name:               terminal-hero
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             darlan-almeida
maintainer:         adarlan748@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable terminal-hero
    import:           warnings

    main-is:          Main.hs

    -- Outras dependências necessárias
    build-depends:    base >=4.7 && <5, 
                      ansi-terminal,
                      random

    hs-source-dirs:   app src
    default-language: Haskell2010
